add user register impl

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ services:
     build:
       context: .
     ports:
-      - "8000:8000"
       - "8080:8080"
     environment:
       - SERVER_PORT=8080
-      - MYSQL_URL=jdbc:mysql://mysqlserver/app
+      - MYSQL_URL=jdbc:mysql://db:3306/app
     volumes:
       - ./:/app
     depends_on:
       - db
-
+    networks:
+      - mynetwork
   db:
     image: mysql:8.0
     ports:
@@ -23,5 +23,10 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=app
+    networks:
+      - mynetwork
 volumes:
   mysql_data:
+networks:
+  mynetwork:
+    driver: bridge
