--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>6.1.2</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<version>1.19.3</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
