--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   spring:
     build:
       context: .
-      target: dev
+      target: test
     ports:
       - "8080:8080"
     environment:
