--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,12 @@
 			<version>1.19.3</version>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webflux</artifactId>
+			<version>6.1.3</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
