move backend server to backend folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   spring:
     build:
-      context: .
+      context: ./backend
       target: test
     ports:
       - "8080:8080"
@@ -15,12 +15,14 @@ services:
     networks:
       - mynetwork
   db:
+    build:
+      context: ./backend
     image: mysql:8.0
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./backend/src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=app
