--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,29 @@ services:
   spring:
     build:
       context: ./backend
-      target: test
+      target: dev
     ports:
       - "8080:8080"
     environment:
       - SERVER_PORT=8080
       - MYSQL_URL=jdbc:mysql://db:3306/app
     volumes:
-      - ./:/app
+      - ./backend:/app/backend
     depends_on:
       - db
     networks:
       - mynetwork
+
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app/frontend
+    networks:
+      - mynetwork
+
   db:
     build:
       context: ./backend
@@ -22,7 +33,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./backend/src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=app
