--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - db
     networks:
       - mynetwork
+    expose:
+      - 8080
 
   frontend:
     build:
@@ -22,23 +24,22 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app/frontend
-    networks:
-      - mynetwork
+    expose:
+      - 3000
 
   db:
-    build:
-      context: ./backend
     image: mysql:8.0
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./backend/src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=app
     networks:
       - mynetwork
+      
 volumes:
   mysql_data:
 networks:
