--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -66,6 +66,12 @@
     </dependencies>
 
 	<build>
+		<sourceDirectory>backend/src/main</sourceDirectory>
+		<resources>
+            <resource>
+                <directory>backend/src/main/resources</directory>
+            </resource>
+        </resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
